src/css/Aboutpage.css
.aboutpage-wrapper {
  position: relative;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  z-index: 1;
  transition: background-color 0.5s ease; 
  color: #000;
}

.aboutpage-text-wrapper {
  position: sticky;
  top: 0;
  background-color: #000;
  z-index: 5;
  padding: 0.2em 5vw;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
}

.aboutpage-text {
  font-family: 'tex_gyre_herosbold', sans-serif;
  font-size: 1.52em;
  text-align: left;
  /* background: linear-gradient(270deg, #12c2e9, #c471ed,#f64f59, #F2994A, #F2C94C);
  background-size: 400% 400%;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  animation: animate-gradient 5s ease infinite; */
  color: #ffffff;
  transition: color 0.5s ease; 
}

.aboutpage-contact {
  font-family: 'inter', sans-serif;
  color: #fff;
  cursor: pointer;
  transition: color 0.5s ease; 
}

.aboutpage-contact:hover {
  text-decoration: underline;
}

.pic-selfie {
  position: sticky;
  bottom: 0;
  right: 0;
  height: 80vh;
  background-position: center;
  background-size: cover;
  /* mix-blend-mode: difference; */
  background-blend-mode: exclusion;
  overflow: hidden;
}

.project-wrapper {
  min-height: 100vh;
  position: relative;
  display: flex;
  align-items: flex-end;
  margin: 0 5vw;
}

.project-text-wrapper {
  max-width: 700px;
  transition: all 0.35s cubic-bezier(0.165, 0.84, 0.44, 1);
}

.project-title {
  font-family: 'tex_gyre_herosbold', sans-serif;
  font-size: 2.32em;
  text-align: left;
}

.project-text { 
  font-family: 'inter', sans-serif;
  line-height: 1.4;
  color: #4c4d4c;
  font-size: 1.02em;
  text-align: left;
  transition: all 0.35s cubic-bezier(0.165, 0.84, 0.44, 1);
}

/* TODO: REMAKE screenshots with full phone - have it scroll down like normally */
/* 
.motive-pic-wrapper {
  position: fixed;
  bottom: 0;
  right: 0;
  width: 30%;
  height: 90%;
} */

.motive-pic-1 {
  position: absolute;
  right: 0;
  bottom: -10%;
  height: 100%;
  width: 30%;
  background-size: contain;
  transition: all 0.35s cubic-bezier(0.165, 0.84, 0.44, 1);
  transition-delay: 0.4s;
}
.motive-pic-2 {
  position: absolute;
  right: -10%;
  bottom: 0;
  height: 100%;
  width: 22%;
  background-size: contain;
  transition: all 0.35s cubic-bezier(0.165, 0.84, 0.44, 1);
  transition-delay: 0.2s;
}
.motive-pic-3 {
  position: absolute;
  right: 20%;
  bottom: 0;
  height: 100%;
  width: 22%;
  background-size: contain;
  transition: all 0.35s cubic-bezier(0.165, 0.84, 0.44, 1);
}


.tidy-pic-1 {
  position: absolute;
  right: 15%;
  bottom: -10%;
  height: 100%;
  width: 30%;
  background-size: contain;
  transition: all 0.35s cubic-bezier(0.165, 0.84, 0.44, 1);
  transition-delay: 0.2s;
}
.tidy-pic-2 {
  position: absolute;
  right: -26px;
  bottom: -10%;
  height: 100%;
  width: 30%;
  background-size: contain;
  transition: all 0.35s cubic-bezier(0.165, 0.84, 0.44, 1);
}

.securcor-pic-2 {
  position: absolute;
  right: -26px;
  top: 25%;
  transform: translate(0, -50%);
  height: 50%;
  width: 50%;
  background-size: contain;
  transition: all 0.35s cubic-bezier(0.165, 0.84, 0.44, 1);
}


.button-primary {
  font-family: 'inter', sans-serif;
  font-weight: 500;
  margin-top: auto;
  margin-bottom: auto;
  text-align: center;
  cursor: pointer;
  background-color: #F6BDD1;
    color: #000000;
  padding: 0.4em 0.8em;
  border-radius: 6px;
}

.button-secondary {
  font-family: 'inter', sans-serif;
  font-weight: 500;
  margin-top: auto;
  margin-bottom: auto;
  text-align: center;
    color: #000000;
  cursor: pointer;
  padding: 0.4em 0.8em;
}



.button-github {
  margin-top: auto;
  margin-bottom: auto;
  text-align: center;
  cursor: pointer;
  overflow: hidden;
  margin-left: 1.4rem;
}

.button-appstore {
  margin-top: auto;
  margin-bottom: auto;
  text-align: center;
  cursor: pointer;
  overflow: hidden;
}


@keyframes animate-gradient { 
  0%{background-position:0% 50%}
  50%{background-position:100% 50%}
  100%{background-position:0% 50%}
}

